--- a/index.html
+++ b/index.html
@@ -327,5 +327,17 @@
       return { addRow, loadExample, calculate, normalizeToTarget, exportCsv, updateMarkSum, runSelfTests };
     })();
   </script>
+  <footer class="text-xs text-slate-500 mt-6 space-y-2">
+  <div>Code: <a href="https://opensource.org/license/mit/" target="_blank" rel="noopener">MIT License</a> · Content: CC BY 4.0</div>
+  <div class="flex items-center gap-2">
+    <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="inline-block">
+      <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" class="inline-block" />
+    </a>
+    <span>This work’s content is licensed under a 
+      <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="underline">Creative Commons Attribution 4.0 International License</a>.
+    </span>
+  </div>
+</footer>
+
 </body>
 </html>
