--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="max-w-6xl mx-auto p-6 space-y-6">
     <header class="flex items-center justify-between">
       <h1 class="text-2xl font-bold">MQA SLT Calculator</h1>
-      <div class="text-sm text-slate-500">v0.5 – fix: totals update on edit; robust event handling; add UI test</div>
+      <div class="text-sm text-slate-500">v0.5 </div>
     </header>
 
     <section class="grid md:grid-cols-4 gap-4 items-end">
