--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     })();
   </script>
   <footer class="text-xs text-slate-500 mt-6 space-y-2">
-  <div>Code: <a href="https://opensource.org/license/mit/" target="_blank" rel="noopener">MIT License</a> · Content: CC BY 4.0</div>
+  '<div>Code: <a href="https://opensource.org/license/mit/" target="_blank" rel="noopener">MIT License</a> · Content: CC BY 4.0</div>
   <div class="flex items-center gap-2">
     <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="inline-block">
       <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" class="inline-block" />
