--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </section>
 
     <section class="text-xs text-slate-500">
-      <p><strong>Type rules (from BasicMQA_SLT):</strong></p>
+      <p><strong>Type rules (from Basic_SLT):</strong></p>
       <ul class="list-disc ml-5">
         <li>Penulisan: 0.6 h per 1% (70% prep, 30% execution)</li>
         <li>Penyelesaian Masalah: 0.725 h per 1% (30% prep, 70% execution)</li>
